# myrtio-esp-light

./: .env.dist  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  build.rs
.cargo/: config.toml  config_esp32.toml
assets/: factory_page.html
crates/myrtio-core/: Cargo.toml
crates/myrtio-core/src/: lib.rs  net.rs  storage.rs
crates/myrtio-firmware/: README.md
crates/myrtio-firmware/light/: Cargo.toml  README.md  build.rs  partitions.csv
crates/myrtio-firmware/light/src/: config.rs  main.rs  state.rs
crates/myrtio-firmware/light/src/app/: usecases.rs
crates/myrtio-firmware/light/src/controller/: homeassistant_mqtt.rs  mod.rs
crates/myrtio-firmware/light/src/controller/mqtt/: mod.rs
crates/myrtio-firmware/light/src/controllers/: dependencies.rs  mod.rs
crates/myrtio-firmware/light/src/controllers/boot/: handler.rs  mod.rs
crates/myrtio-firmware/light/src/controllers/mqtt/: device.rs  homeassistant_module.rs  mod.rs
crates/myrtio-firmware/light/src/controllers/ota/: handler.rs  mod.rs
crates/myrtio-firmware/light/src/domain/: dto.rs  entity.rs  ports.rs
crates/myrtio-firmware/light/src/hardware/: light_driver.rs  mod.rs
crates/myrtio-firmware/light/src/infrastructure/: config.rs  mod.rs  types.rs
crates/myrtio-firmware/light/src/infrastructure/drivers/: flash_storage.rs  led.rs  led_ws2812.rs  mod.rs  network.rs
crates/myrtio-firmware/light/src/infrastructure/repositories/: mod.rs  persistent_light_state.rs
crates/myrtio-firmware/light/src/infrastructure/services/: light_state.rs  mod.rs  ota.rs  persistence.rs
crates/myrtio-firmware/light/src/infrastructure/tasks/: flash_actor.rs  light_composer.rs  mod.rs  mqtt_runtime.rs  network.rs  ota.rs  ota_invite.rs  persistence.rs
crates/myrtio-homeassistant/: Cargo.toml
crates/myrtio-homeassistant/src/: client.rs  device.rs  error.rs  lib.rs  mqtt_module.rs  topic.rs
crates/myrtio-homeassistant/src/entity/: light.rs  mod.rs  number.rs
crates/myrtio-homeassistant/src/ha/: command.rs  discovery.rs  mapping.rs  mod.rs  state.rs  topic.rs
crates/myrtio-light-composer/: Cargo.toml
crates/myrtio-light-composer/src/: command.rs  driver.rs  engine.rs  lib.rs  math8.rs  models.rs  state.rs
crates/myrtio-light-composer/src/color/: mod.rs  utils.rs
crates/myrtio-light-composer/src/effect/: brightness.rs  mod.rs  rainbow.rs  static_color.rs
crates/myrtio-light-composer/src/mode/: mod.rs  rainbow.rs
crates/myrtio-light-composer/src/processor/: brightness.rs  color_correction.rs  mod.rs
crates/myrtio-light-composer/src/transition/: color.rs  mod.rs
crates/myrtio-macros/: Cargo.toml
crates/myrtio-macros/src/: const_builder.rs  lib.rs
crates/myrtio-macros/tests/: const_builder_tests.rs
crates/myrtio-mqtt/: Cargo.toml  README.md
crates/myrtio-mqtt/examples/: const_topics_module.rs  dynamic_topics_module.rs  esp8266_uart.rs  smoltcp_ethernet.rs
crates/myrtio-mqtt/src/: client.rs  error.rs  lib.rs  packet.rs  transport.rs  util.rs
crates/myrtio-mqtt/src/runtime/: event_loop.rs  publisher.rs  traits.rs
crates/myrtio-netutils/: Cargo.toml
crates/myrtio-netutils/src/: lib.rs
crates/myrtio-wifi/: Cargo.toml
crates/myrtio-wifi/src/: lib.rs
factory-page/: Cargo.toml  build.rs  index.html  package.json  vite.config.ts
factory-page/src/: lib.rs  main.ts  models.ts  store.ts  style.css  style.scss
factory-page/src/api/: fetch.ts  index.ts  interface.ts  mock.ts
factory-page/src/blocks/: Connection.astro  Light.astro  System.astro  configuration.ts  header.ts  system.ts
factory-page/src/client/: main.ts
factory-page/src/components/: ColorPill.astro  FieldGroup.astro  Header.astro  Input.astro  RangeSlider.astro  SaveBar.astro  Select.astro  Typography.astro
factory-page/src/components/icons/: Eye.astro
factory-page/src/model/: constants.ts  store.ts
factory-page/src/pages/: index.astro
factory-page/src/utils/: dom.ts  hex-color.ts  mutex.test.ts  mutex.ts  sleep.ts  store.test.ts  store.ts
scripts/: build-factory-page.sh  ota.py
src/: config.rs  lib.rs  main.rs
src/app/: mod.rs  usecases.rs
src/app/usecases/: configuration.rs  firmware.rs  light.rs  mod.rs
src/controllers/: button.rs  mod.rs
src/controllers/app/: boot.rs  button.rs  mod.rs  mqtt_homeassistant.rs
src/controllers/boot/: handler.rs
src/controllers/factory/: button.rs  http.rs  mod.rs
src/controllers/mqtt/: device.rs  homeassistant_module.rs  mod.rs
src/controllers/ota/: handler.rs  mod.rs
src/core/: mod.rs
src/core/net/: dhcp.rs  mod.rs
src/core/net/http/: connection.rs  headers.rs  mod.rs  server.rs
src/core/sync/: init_ptr_mutex.rs  mod.rs
src/domain/: dto.rs  entity.rs  mod.rs  ports.rs  types.rs
src/domain/ports/: configuration.rs  firmware.rs  light.rs  mod.rs  persistence.rs
src/infrastructure/: config.rs  mod.rs  types.rs
src/infrastructure/adapters/: boot_button.rs  http_server.rs  mod.rs  mqtt.rs  mqtt_client.rs
src/infrastructure/drivers/: flash_storage.rs  led_ws2812.rs  mod.rs  network.rs  random.rs  wifi_ap.rs  wifi_sta.rs
src/infrastructure/repositories/: boot_manager.rs  mod.rs  persistent_light_state.rs  persistent_storage.rs
src/infrastructure/services/: dhcp.rs  flash.rs  flash_firmware.rs  flash_persistence.rs  light.rs  light_state.rs  mod.rs  ota.rs  persistence.rs
src/infrastructure/services/http/: connection.rs  headers.rs  http_server.rs  mod.rs
src/infrastructure/services/light/: mod.rs  service.rs  state.rs
src/infrastructure/services/storage/: firmware.rs  mod.rs  ota.rs  persistence.rs  state.rs
src/infrastructure/tasks/: dhcp_server.rs  factory_ap.rs  factory_http.rs  flash_actor.rs  light_composer.rs  mod.rs  mqtt_runtime.rs  network.rs  ota.rs  persistence.rs
src/infrastructure/tasks/app/: boot.rs  mod.rs  mqtt_client.rs  network.rs
src/infrastructure/tasks/factory/: blink.rs  http_server.rs  http_server2.rs  mod.rs  network.rs
unit-tests/: Cargo.toml
unit-tests/src/: lib.rs
unit-tests/src/light_composer/: color.rs  math8.rs  mod.rs
