[workspace]
members = [
    "crates/myrtio-firmware/light",
    "crates/myrtio-light-composer",
    "crates/myrtio-mqtt",
    "crates/myrtio-homeassistant",
    "crates/myrtio-core",
    "crates/myrtio-macros",
    "unit-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT"

[workspace.dependencies]
myrtio-light-firmware = { path = "crates/myrtio-firmware/light" }
myrtio-light-composer = { path = "crates/myrtio-light-composer" }
myrtio-mqtt = { path = "crates/myrtio-mqtt" }
myrtio-homeassistant = { path = "crates/myrtio-homeassistant" }
myrtio-core = { path = "crates/myrtio-core" }
myrtio-macros = { path = "crates/myrtio-macros" }

esp-bootloader-esp-idf = "0.1.0"
esp-hal = "1.0.0"
esp-alloc = "0.9.0"
esp-rtos = "0.2.0"
esp-println = "0.16.1"
esp-backtrace = "0.18.1"
esp-radio = "0.17.0"
esp-storage = "0.8.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "d9239ac49c7b383689fbbb1762db021e2a7a41a2" }

embedded-storage = "0.3.1"

embassy-executor = "0.9.1"
embassy-time = "0.5.0"
embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

critical-section = "1.2.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = "0.9"
smart-leds = "0.4.0"

serde = { version = "1.0.228", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-storage]
opt-level = 3

[workspace.lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(codspeed)"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
uninlined_format_args = "allow"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"
