[package]
name = "myrtio-esp-light"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "myrtio-esp-light-app"
path = "src/bin/app.rs"

[[bin]]
name = "myrtio-esp-light-factory"
path = "src/bin/factory.rs"

[dependencies]
myrtio-light-factory-page = { path = "factory-page" }

myrtio-light-composer = "0.6.4"
myrtio-mqtt = { path = "../myrtio-mqtt" }
myrtio-mqtt-homeassistant = "0.1.2"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-alloc = { version = "0.9.0", features = ["esp32"] }
esp-rtos = { version = "0.2.0", features = ["esp-radio", "embassy", "esp32"] }
esp-println = { version = "0.16.1", features = ["log-04", "esp32"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32",
    "println",
    "panic-handler",
] }
esp-radio = { version = "0.17.0", features = ["esp32", "wifi"] }
esp-storage = { version = "0.8.1", features = ["esp32"] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "d9239ac49c7b383689fbbb1762db021e2a7a41a2" }

embassy-executor = "0.9.1"
embassy-time = { version = "0.5.0", features = ["generic-queue-16"] }
embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "dhcpv4-hostname",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
async-trait-static = "0.1.4"

critical-section = "1.2.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = "0.8"
bytemuck = { version = "1.24.0", features = ["min_const_generics", "derive"] }

serde = { version = "1.0.228", default-features = false }
serde-json-core = { version = "0.6.0", features = ["heapless"] }

smart-leds = "0.4.0"

[build-dependencies]
chrono = "0.4.31"

[features]
log = []
default = []
rs1 = []
curtain = []
bar = []
ceiling = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-storage]
opt-level = 3

[lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(codspeed)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
uninlined_format_args = "allow"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"

[patch.crates-io]
myrtio-mqtt = { path = "../myrtio-mqtt" }
