[package]
name = "myrtio-core"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }

[dependencies]
embassy-net = { workspace = true, features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embedded-storage = { workspace = true }

[lints]
workspace = true
