[package]
name = "myrtio-homeassistant"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }
heapless = { workspace = true, features = ["serde"] }
myrtio-mqtt = { workspace = true }
myrtio-macros = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
