[package]
name = "myrtio-light-composer"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "myrtio_light_composer"
harness = false

[lints]
workspace = true

[dependencies]
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
smart-leds = "0.4.0"
# embedded-test = { default-features = false, features = ["xtensa-semihosting", "panic-handler"]}
myrtio-core = { workspace = true }
esp-println = { workspace = true, optional = true, features = ["esp32"] }
# semihosting = { version = "0.1.21", features = ["openocd-semihosting", "link-sections"]}

[features]
default = []
log = ["dep:esp-println"]