[package]
name = "myrtio-light-composer"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "myrtio_light_composer"
harness = false

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
smart-leds = { workspace = true }
heapless = { workspace = true }
esp-println = { workspace = true, optional = true, features = ["esp32"] }
libm = "0.2.15"

[features]
default = []
log = ["dep:esp-println"]
