[package]
name = "myrtio-mqtt"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
v5 = []
defmt = ["dep:defmt"]
log = ["dep:log"]
esp-println = ["dep:esp-println"]

[dependencies]
log = { version = "0.4", optional = true }
esp-println = { workspace = true, optional = true, features = ["esp32"] }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
heapless = "0.9"
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true, features = [
    "tcp",
    "medium-ethernet",
    "proto-ipv4",
]}
futures = { version = "0.3.30", default-features = false }
defmt = { version = "0.3", optional = true }
