[package]
name = "myrtio-light-firmware"
version = "0.0.0"
publish = false
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "myrtio-light-firmware"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
myrtio-core = { workspace = true }
myrtio-light-composer = { workspace = true }
myrtio-mqtt = { workspace = true }
myrtio-homeassistant = { workspace = true }

esp-alloc = { workspace = true }
esp-backtrace = { workspace = true, features = [
    "esp32",
    "println",
    "panic-handler",
] }
esp-bootloader-esp-idf = { workspace = true }
esp-hal = { workspace = true, features = ["esp32", "unstable"] }
esp-println = { workspace = true, features = ["log-04", "esp32"] }
esp-radio = { workspace = true, features = ["esp32", "wifi"] }
esp-rtos = { workspace = true, features = ["esp-radio", "embassy", "esp32"] }
esp-storage = { workspace = true, features = ["esp32"] }
esp-hal-smartled = { workspace = true, features = ["esp32"] }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["generic-queue-16"] }
embassy-net = { workspace = true, features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embassy-futures = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }
# embedded-test = { version = "0.7.0", default-features = false, features = ["std"]}

critical-section = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
smart-leds = { workspace = true }

[build-dependencies]
dotenv-build = "0.1.1"

[features]
default = []
rs1 = []

[lints]
workspace = true

